# rapidsnark

./: CMakeLists.txt  package-lock.json  package.json
depends/ffiasm/test/build-tester-Desktop-Debug/: Makefile
depends/ffiasm/test/tester/: tester.pro
mult/: circuit_final.zkey  circuit_final.zkey.json  proof.json  verification_key.json
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/src/: Makefile  cmake_install.cmake  prover
